--- a/package.json
+++ b/package.json
@@ -19,14 +19,17 @@
       "test": "echo \"no test specified\""
    },
    "devDependencies": {
-      "@types/ini": "^1.3.29",
-      "@types/node": "^10.11.2",
-      "concurrently": "^4.0.1",
-      "nodemon": "^1.18.4",
-      "typescript": "^3.1.1"
+      "@types/ini": "^1.3.30",
+      "@types/node": "^10.12.12",
+      "chai": "^4.2.0",
+      "chai-as-promised": "^7.1.1",
+      "concurrently": "^4.1.0",
+      "mocha": "^5.2.0",
+      "nodemon": "^1.18.7",
+      "typescript": "^3.2.2"
    },
    "dependencies": {
-      "@hibas123/nodelogging": "^1.3.19",
+      "@hibas123/nodelogging": "^1.3.21",
       "influx": "^5.0.7",
       "ini": "^1.3.5",
       "moment": "^2.22.2",
