--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
       "outDir": "./lib", /* Redirect output structure to the directory. */
       "rootDir": "./src", /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
       "strict": false, /* Enable all strict type-checking options. */
-      "esModuleInterop": false /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
+      "esModuleInterop": false, /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
+      "preserveWatchOutput": true
    }
 }
